Refactor lore generation and text formatting logic.
Streamlined text decoration imports and refactored lore generation methods for clarity and consistency. Consolidated redundant code and optimized component construction for improved readability.